--- a/app_shell.html
+++ b/app_shell.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width">
 <script>var soundslice = {"lang": "en", "is_ss": 1, "media_url": 'https://d2c3nvafyekx5z.cloudfront.net/', "user_id": null};</script>
 
-<link rel="stylesheet" href="./styles/player_embed.css">
+<link rel="stylesheet" href="./css/player_embed.css">
 
 <style>
 @font-face {
