Add instrument and settings scripts, fonts and images

--- a/app_shell.html
+++ b/app_shell.html
@@ -44,11 +44,11 @@
 <div id="appandedit" class="appandedit notation-loading"
 
 data-modwaveform="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-waveform.min-5019d081aaecd22d5e9becd396760136.js"
-data-modfretboard="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-fretboard.min-fea0347da44b4d42c18940c4a2fbce69.js"
-data-modkeyboard="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-keyboard.min-1650c044352b99bb19200ccd22d32384.js"
+data-modfretboard="./scripts/embed-fretboard.min.js"
+data-modkeyboard="./scripts/embed-keyboard.min.js"
 data-modtrombone="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-trombone.min-f13a055bcc9f99b71ace353a4e407384.js"
 data-modtrumpet="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-trumpet.min-8b12ec7fa66f3edb5b6aaffe1c8cff06.js"
-data-modsettings="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-settings.min-b35eb4da831c42d13e01747595091ea0.js"
+data-modsettings="./scripts/embed-settings.min.js"
 data-modimagelayout="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-imagelayout.min-0d8bfad4313c26bc15f4afff29ca4509.js"
 
 
@@ -1123,7 +1123,7 @@ data-modimagelayout="https://d2c3nvafyekx5z.cloudfront.net/scripts/embed-imagela
                 <span class="powered-by-inner">
                 
                 <span class="powered-by-text truncate-text">Powered by</span>
-                <img src="https://d2c3nvafyekx5z.cloudfront.net/images/soundslice-wordmark-a9f4b9b4c27544ac64d14dab10f8adb5.svg" alt="Soundslice" class="soundslice-logo">
+                <img src="./images/soundslice-wordmarks.svg" alt="Soundslice" class="soundslice-logo">
                 </span>
         </a>
         
